# milli-py

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
.claude/: settings.json
.github/workflows/: ci.yml
benchmarks/: bench.py  requirements.txt
docs/: index.md
src/: conv.rs  lib.rs  obkv.rs
tests/: __init__.py  test_milli_index.py
