[package]
name = "milli_py"
version = "1.11.1"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
authors = ["Alexandro Sanchez Bach <alexandro@phi.nz>"]
description = "Python bindings for Milli, the embeddable Rust-based search engine powering Meilisearch"
repository = "https://github.com/AlexAltea/milli-py"

[lib]
name = "milli"

# Needed to produce a shared library for Python.
crate-type = ["cdylib"]

[dependencies]
milli = { path = "meilisearch/milli" }
pyo3 = { version = "0.28.3", features = ["extension-module"] }
serde_json = "1.0.149"
serde = "1.0.228"

[workspace]
resolver = "2"
members = [
    ".",
    "meilisearch/milli",
    "meilisearch/filter-parser",
    "meilisearch/flatten-serde-json",
    "meilisearch/json-depth-checker",
]

[workspace.package]
version = "1.11.1"
authors = [
    "Quentin de Quelen <quentin@dequelen.me>",
    "Clément Renault <clement@meilisearch.com>",
]
description = "Meilisearch HTTP server"
homepage = "https://meilisearch.com"
readme = "README.md"
edition = "2021"
license = "MIT"
