[package]
name = "milli_py"
version = "1.41.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
authors = ["Alexandro Sanchez Bach <alexandro@phi.nz>"]
description = "Python bindings for Milli, the embeddable Rust-based search engine powering Meilisearch"
repository = "https://github.com/AlexAltea/milli-py"

[lib]
name = "milli"

# Needed to produce a shared library for Python.
crate-type = ["cdylib"]

[dependencies]
milli = { path = "meilisearch/crates/milli" }
http-client = { path = "meilisearch/crates/http-client" }
pyo3 = { version = "0.28.3", features = ["extension-module"] }
bumpalo = "3.19.0"
serde_json = "1.0.149"
serde = "1.0.228"

[workspace]
resolver = "2"
members = [
    ".",
    "meilisearch/crates/milli",
    "meilisearch/crates/filter-parser",
    "meilisearch/crates/json-depth-checker",
]
