[project]
name = "milli"
requires-python = ">=3.7"
repository = "https://github.com/AlexAltea/milli-py"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"
