[project]
name = "milli"
version = "1.11.1"
requires-python = ">=3.10"
repository = "https://github.com/AlexAltea/milli-py"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
