[project]
name = "milli"
version = "1.11.1"
description = "Python bindings for Milli, the embeddable Rust-based search engine powering Meilisearch"
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[project.urls]
Documentation = "https://github.com/AlexAltea/milli-py/blob/master/docs/index.md"
Repository = "https://github.com/AlexAltea/milli-py.git"
Issues = "https://github.com/AlexAltea/milli-py/issues"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
